--- a/scriptorium.css
+++ b/scriptorium.css
@@ -20,8 +20,22 @@
 
 }
 
+#wrapper{	margin: 0 auto;
+		width: 800px;
+		background-color:#FFFFFF;
+		border-left: 10px #000;
+		border-right: 10px #000;
+		padding-left: 16px;
+		padding-right: 16px;
+		padding-top: 0px;
+		padding-bottom:16px;
+		min-height:100%;
+		margin-top:25px;
+		box-shadow: 6px 0px 10px -7px #666, -6px 0px 10px -7px #666, 0px 6px 10px -7px #000, 0px -6px 10px -7px #000;}
+
+
 h1 {
-	font: 60px Verdana, Arial, sans-serif, serif; color: #886655; vertical-align: bottom; padding-bottom: 5x;
+	font: 50px Verdana, Arial, sans-serif, serif; color: #886655; vertical-align: bottom; padding-bottom: 3x;
 }
 
 
@@ -39,7 +53,10 @@ h4 {
 p, ul, ol, li, table {font: 12px/18px Verdana, Arial, sans-serif;}
 
 
-body{font: 12px Arial, Helvetica, sans-serif;}
+body{
+	font: 12px Arial, Helvetica, sans-serif;
+	background-color:#D77850;
+	}
 
 .line {
 position:absolute; /* doesn't have to be absolute */
