--- a/download/corpora/AP/dipl.css
+++ b/download/corpora/AP/dipl.css
@@ -21,77 +21,77 @@
 }
 
 .htmlvis {
-font-family: Antinoou, sans-serif;
+font-family: antinoouRegular, sans-serif;
 counter-reset: line 0;
 }
-div.line[line="1"]{text-indent:20px;}
-div.line[line="2"]{text-indent:20px;}
-div.line[line="3"]{text-indent:20px;}
-div.line[line="4"]{text-indent:20px;}
-div.line[line="5"]:before{content:attr(line)" "}
-div.line[line="5"]{text-indent:10px;}
-div.line[line="6"]{text-indent:20px;}
-div.line[line="7"]{text-indent:20px;}
-div.line[line="8"]{text-indent:20px;}
-div.line[line="9"]{text-indent:20px;}
-div.line[line="10"]:before{content:attr(line)" "}
-div.line[line="11"]{text-indent:20px;}
-div.line[line="12"]{text-indent:20px;}
-div.line[line="13"]{text-indent:20px;}
-div.line[line="14"]{text-indent:20px;}
-div.line[line="15"]:before{content:attr(line)" "}
-div.line[line="16"]{text-indent:20px;}
-div.line[line="17"]{text-indent:20px;}
-div.line[line="18"]{text-indent:20px;}
-div.line[line="19"]{text-indent:20px;}
-div.line[line="20"]:before{content:attr(line)" "}
-div.line[line="21"]{text-indent:20px;}
-div.line[line="22"]{text-indent:20px;}
-div.line[line="23"]{text-indent:20px;}
-div.line[line="24"]{text-indent:20px;}
-div.line[line="25"]:before{content:attr(line)" "}
-div.line[line="26"]{text-indent:20px;}
-div.line[line="27"]{text-indent:20px;}
-div.line[line="28"]{text-indent:20px;}
-div.line[line="29"]{text-indent:20px;}
-div.line[line="30"]:before{content:attr(line)" "}
-div.line[line="31"]{text-indent:20px;}
-div.line[line="32"]{text-indent:20px;}
-div.line[line="33"]{text-indent:20px;}
-div.line[line="34"]{text-indent:20px;}
-div.line[line="35"]:before{content:attr(line)" "}
-div.line[line="36"]{text-indent:20px;}
-div.line[line="37"]{text-indent:20px;}
-div.line[line="38"]{text-indent:20px;}
-div.line[line="39"]{text-indent:20px;}
-div.line[line="40"]:before{content:attr(line)" "}
-div.line[line="41"]{text-indent:20px;}
-div.line[line="42"]{text-indent:20px;}
-div.line[line="43"]{text-indent:20px;}
-div.line[line="44"]{text-indent:20px;}
-div.line[line="45"]:before{content:attr(line)" "}
-div.line[line="46"]{text-indent:20px;}
-div.line[line="47"]{text-indent:20px;}
-div.line[line="48"]{text-indent:20px;}
-div.line[line="49"]{text-indent:20px;}
-div.line[line="50"]:before{content:attr(line)" "}
+div.copt_line[line="1"]{text-indent:20px;}
+div.copt_line[line="2"]{text-indent:20px;}
+div.copt_line[line="3"]{text-indent:20px;}
+div.copt_line[line="4"]{text-indent:20px;}
+div.copt_line[line="5"]:before{content:attr(line)" "}
+div.copt_line[line="5"]{text-indent:10px;}
+div.copt_line[line="6"]{text-indent:20px;}
+div.copt_line[line="7"]{text-indent:20px;}
+div.copt_line[line="8"]{text-indent:20px;}
+div.copt_line[line="9"]{text-indent:20px;}
+div.copt_line[line="10"]:before{content:attr(line)" "}
+div.copt_line[line="11"]{text-indent:20px;}
+div.copt_line[line="12"]{text-indent:20px;}
+div.copt_line[line="13"]{text-indent:20px;}
+div.copt_line[line="14"]{text-indent:20px;}
+div.copt_line[line="15"]:before{content:attr(line)" "}
+div.copt_line[line="16"]{text-indent:20px;}
+div.copt_line[line="17"]{text-indent:20px;}
+div.copt_line[line="18"]{text-indent:20px;}
+div.copt_line[line="19"]{text-indent:20px;}
+div.copt_line[line="20"]:before{content:attr(line)" "}
+div.copt_line[line="21"]{text-indent:20px;}
+div.copt_line[line="22"]{text-indent:20px;}
+div.copt_line[line="23"]{text-indent:20px;}
+div.copt_line[line="24"]{text-indent:20px;}
+div.copt_line[line="25"]:before{content:attr(line)" "}
+div.copt_line[line="26"]{text-indent:20px;}
+div.copt_line[line="27"]{text-indent:20px;}
+div.copt_line[line="28"]{text-indent:20px;}
+div.copt_line[line="29"]{text-indent:20px;}
+div.copt_line[line="30"]:before{content:attr(line)" "}
+div.copt_line[line="31"]{text-indent:20px;}
+div.copt_line[line="32"]{text-indent:20px;}
+div.copt_line[line="33"]{text-indent:20px;}
+div.copt_line[line="34"]{text-indent:20px;}
+div.copt_line[line="35"]:before{content:attr(line)" "}
+div.copt_line[line="36"]{text-indent:20px;}
+div.copt_line[line="37"]{text-indent:20px;}
+div.copt_line[line="38"]{text-indent:20px;}
+div.copt_line[line="39"]{text-indent:20px;}
+div.copt_line[line="40"]:before{content:attr(line)" "}
+div.copt_line[line="41"]{text-indent:20px;}
+div.copt_line[line="42"]{text-indent:20px;}
+div.copt_line[line="43"]{text-indent:20px;}
+div.copt_line[line="44"]{text-indent:20px;}
+div.copt_line[line="45"]:before{content:attr(line)" "}
+div.copt_line[line="46"]{text-indent:20px;}
+div.copt_line[line="47"]{text-indent:20px;}
+div.copt_line[line="48"]{text-indent:20px;}
+div.copt_line[line="49"]{text-indent:20px;}
+div.copt_line[line="50"]:before{content:attr(line)" "}
 
-/*div.line[line="5"]:first-child{padding-top:110px;}*/
-div.line[line="4"]:first-child{padding-bottom:5px;}
-div.line[line="9"]:first-child{padding-top:176px;}
-div.line[line="13"]:first-child{padding-top:264px;}
-div.line[line="14"]:first-child{padding-top:220px;}
-div.line[line="18"]:first-child{padding-top:174px;}
-div.line[line="38"]:first-child{padding-top:214px;}
-div.line[line="40"]:first-child{padding-top:258px;}
+/*div.copt_line[line="5"]:first-child{padding-top:110px;}*/
+div.copt_line[line="4"]:first-child{padding-bottom:5px;}
+div.copt_line[line="9"]:first-child{padding-top:176px;}
+div.copt_line[line="13"]:first-child{padding-top:264px;}
+div.copt_line[line="14"]:first-child{padding-top:220px;}
+div.copt_line[line="18"]:first-child{padding-top:174px;}
+div.copt_line[line="38"]:first-child{padding-top:214px;}
+div.copt_line[line="40"]:first-child{padding-top:258px;}
 
 
 
-/*div.line:nth-of-type(5n):before{content:attr(line)" "}
-div.line:nth-of-type(1){counter-reset: line attr(line);}
-div.line:nth-of-type(5n):before{content:counter(line)" "}
-div.line:nth-of-type(5){text-indent:10px;}*/
-div.line{display: block; white-space:nowrap; counter-increment: line ; height: 22px}
+/*div.copt_line:nth-of-type(5n):before{content:attr(line)" "}
+div.copt_line:nth-of-type(1){counter-reset: line attr(line);}
+div.copt_line:nth-of-type(5n):before{content:counter(line)" "}
+div.copt_line:nth-of-type(5){text-indent:10px;}*/
+div.copt_line{display: block; white-space:nowrap; counter-increment: line ; height: 22px}
 
 hi_rend[rend~=superscript] {vertical-align: super; font-size: 80%}
 hi_rend[rend~=subcript] {vertical-align: sub; font-size: 80%}
@@ -108,8 +108,8 @@ hi_rend[rend*='2_space_right'] {padding-right: 10px}
 hi_rend[rend*='5_space_left'] {text-indent: -40px}
 hi_rend[rend*='5_space_right'] {padding-right: 40px}
 
-#div.line{text-indent:20px;}
-/*div.line:not(:nth-of-type(5n)){text-indent:20px;}*/
+#div.copt_line{text-indent:20px;}
+/*div.copt_line:not(:nth-of-type(5n)){text-indent:20px;}*/
 #.pos{color:red; font-weight: normal}
 #.translation:hover{color: blue;}
 #.rend{font-size: x-large;}
