--- a/download/corpora/AP/analytic.css
+++ b/download/corpora/AP/analytic.css
@@ -1,5 +1,31 @@
+@font-face {
+    font-family: 'antinoouRegular';
+    src: url('antinoou-webfont.eot');
+    src: url('antinoou-webfont.eot?#iefix') format('embedded-opentype'),
+         url('antinoou-webfont.woff') format('woff'),
+         url('antinoou-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'antinoouItalic';
+    src: url('antinoouitalic-webfont.eot');
+    src: url('antinoouitalic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('antinoouitalic-webfont.woff') format('woff'),
+         url('antinoouitalic-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+body {
+	font-family: 'antinoouRegular', Helvetica, sanserif;
+}
+
 div.htmlvis {
-font-family: Antinoou, sans-serif; font-size: 12pt; width: 600px; white-space: normal !important;
+font-family: antinoouRegular, sans-serif; width: 500px; white-space: normal !important;  
 }
 /*.translation:before{display: block}*/
 div.translation:after{content:"\A"attr(trans)"\A\A"; display: block;  padding-bottom: 20px; font-style: italic; color: blue; white-space: normal}
