--- a/download/corpora/AP/dipl.css
+++ b/download/corpora/AP/dipl.css
@@ -81,7 +81,7 @@ div.copt_line[line="4"]:first-child{padding-bottom:5px;}
 div.copt_line[line="9"]:first-child{padding-top:176px;}
 div.copt_line[line="13"]:first-child{padding-top:264px;}
 div.copt_line[line="14"]:first-child{padding-top:220px;}
-div.copt_line[line="18"]:first-child{padding-top:174px;}
+div.copt_line[line="18"]:first-child{padding-top:374px;}
 div.copt_line[line="38"]:first-child{padding-top:214px;}
 div.copt_line[line="40"]:first-child{padding-top:258px;}
 
@@ -100,13 +100,7 @@ hi_rend[rend*=blue] {color: blue}
 hi_rend[rend*=brown] {color: brown}
 hi_rend[rend*=tall] {font-size: 120%}
 hi_rend[rend*=extralarge] {font-size: 160%}
-hi_rend[rend*=ekthetic] {margin-left: -10px !important}
-hi_rend[rend*='1_space_left'] {text-indent: -5px}
-hi_rend[rend*='1_space_right'] {padding-right: 5px}
-hi_rend[rend*='2_space_left'] {text-indent: -10px}
-hi_rend[rend*='2_space_right'] {padding-right: 10px}
-hi_rend[rend*='5_space_left'] {text-indent: -40px}
-hi_rend[rend*='5_space_right'] {padding-right: 40px}
+hi_rend[rend*=ekthetic] {text-indent: -7px !important; display: inline-block}
 
 #div.copt_line{text-indent:20px;}
 /*div.copt_line:not(:nth-of-type(5n)){text-indent:20px;}*/
@@ -116,4 +110,3 @@ hi_rend[rend*='5_space_right'] {padding-right: 40px}
 #.person{color:red;}
 .pb{border-style:solid;}
 .cb{vertical-align: top; counter-reset: line 0; min-width:160px}
-
