--- a/download/corpora/1Cor/analytic.css
+++ b/download/corpora/1Cor/analytic.css
@@ -31,7 +31,7 @@ font-family: antinoouRegular, sans-serif; width: 500px; white-space: normal !imp
 div.translation:after{content:"\A"attr(trans)"\A\A"; display: block;  padding-bottom: 20px; font-style: italic; color: blue; white-space: normal}
 /*.copt_word{ white-space: inherit; display: block;}*/
 .copt_word:after{content: " ";}
-/*ruby.rnorm:after{margin-left:auto; margin-right:auto; content: "|";}*/
+/*ruby.norm:after{margin-left:auto; margin-right:auto; content: "|";}*/
 span > ruby.norm:only-of-type:after{content: "" !important;}
 div > ruby.norm:after{content: "" !important;}
 span > ruby.norm:last-of-type:after{content: "" !important;}
