--- a/download/corpora/A22/norm.css
+++ b/download/corpora/A22/norm.css
@@ -21,7 +21,7 @@
 }
 
 div.htmlvis {
-font-family: Antinoou, sans-serif; width: 500px; white-space: normal !important;
+font-family: antinoouRegular, sans-serif; width: 500px; white-space: normal !important;
 }
 /*#.line{display: block; white-space:nowrap; }
 #.line:before{content:attr(line)": ";}*/
