--- a/download/corpora/Mark/analytic.css
+++ b/download/corpora/Mark/analytic.css
@@ -25,7 +25,7 @@ body {
 }
 
 div.htmlvis {
-font-family: antinoouRegular, sans-serif; width: 500px; white-space: normal !important;  
+font-family: Antinoou, sans-serif; font-size: 12pt; width: 600px; white-space: normal !important;
 }
 /*.translation:before{display: block}*/
 div.translation:after{content:"\A"attr(trans)"\A\A"; display: block;  padding-bottom: 20px; font-style: italic; color: blue; white-space: normal}
