--- a/download/corpora/Mark/sahidica.css
+++ b/download/corpora/Mark/sahidica.css
@@ -20,6 +20,10 @@
 
 }
 
+body {
+	font-family: 'antinoouRegular', Helvetica, sanserif;
+}
+
 div.htmlvis {
 font-family: antinoouRegular, sans-serif;
 width: 500px; white-space: normal !important;
