--- a/newlogobranding/scriptorium/scriptorium.css
+++ b/newlogobranding/scriptorium/scriptorium.css
@@ -392,12 +392,12 @@ tt{padding-left: 5px; padding-top: 5px}
     padding: 0;
     margin: 0;
     list-style: none;
-	vertical-align:middle;
+	 vertical-align:middle;
 }
  
 .css-treeview input
 {
-    position: absolute;
+    position: relative;
     opacity: 0;
 }
  
@@ -450,9 +450,7 @@ tt{padding-left: 5px; padding-top: 5px}
 .css-treeview label.folder,
 .css-treeview label.folder::before
 {
-    background: url("img/folder.png") no-repeat;
-	    height: 22px;
-
+	    min-height: 22px;
 }
  
 .css-treeview label,
@@ -482,8 +480,11 @@ tt{padding-left: 5px; padding-top: 5px}
  
 .css-treeview input.folder:checked + label.folder::before
 {
-    background: url("img/icons.png") no-repeat;
-    background-position: 0 6px;
+    content: "";
+    width: 16px;
+    margin: 0 22px 0 0;
+    vertical-align: middle;
+    background: url("img/close.png") no-repeat center;
 }
 
 
@@ -528,9 +529,7 @@ tt{padding-left: 5px; padding-top: 5px}
     margin: 0 22px 0 0;
     vertical-align: middle;
 	
-    background: url("img/icons.png") no-repeat;
-
-    background-position: 0 -10px;
+    background: url("img/open.png") no-repeat center;
 }
 .css-treeview label.doc, .css-treeview label.dl
 {
@@ -552,16 +551,28 @@ tt{padding-left: 5px; padding-top: 5px}
 }
 
 li.info {
-background:url(img/i_button.gif) no-repeat 0 5px; 
+/*background:url(img/i_button.gif) no-repeat 0 5px; 
 padding: 0 0 3px 22px;
-height: 22px;
+height: 22px;*/
+line-height: 100%;
+margin-top: 10px;
+margin-bottom: 10px;
 }
 li.search {
-background:url(img/search.gif) no-repeat 0 5px; 
+/*background:url(img/search.gif) no-repeat 0 5px; 
 padding: 0 0 3px 22px;
-height: 22px;
+min-height: 22px;*/
+}
+li.download {
+/*min-height: 22px;
+padding: 0 0 3px 22px;*/
 }
 
 .example_queries li {
 margin-top: 1em;
+}
+
+.tree-container {
+  margin-top: 15px;
+  margin-bottom: 50px;
 }
