--- a/newlogobranding/scriptorium/scriptorium.css
+++ b/newlogobranding/scriptorium/scriptorium.css
@@ -411,7 +411,6 @@ tt{padding-left: 5px; padding-top: 5px}
  
 .css-treeview a
 {
-    color: #00f;
     text-decoration: none;
 }
  
@@ -473,7 +472,7 @@ tt{padding-left: 5px; padding-top: 5px}
 {
     content: "";
     width: 32px;
-    margin: 0 22px 0 0;
+    margin: 0 6px 0 0;
     vertical-align: middle;
     background-position: 0 -10px;
 }
@@ -482,7 +481,7 @@ tt{padding-left: 5px; padding-top: 5px}
 {
     content: "";
     width: 16px;
-    margin: 0 22px 0 0;
+    margin: 0 6px 0 0;
     vertical-align: middle;
     background: url("img/close.png") no-repeat center;
 }
@@ -526,7 +525,7 @@ tt{padding-left: 5px; padding-top: 5px}
 {
     content: "";
     width: 16px;
-    margin: 0 22px 0 0;
+    margin: 0 6px 0 0;
     vertical-align: middle;
 	
     background: url("img/open.png") no-repeat center;
@@ -575,4 +574,17 @@ margin-top: 1em;
 .tree-container {
   margin-top: 15px;
   margin-bottom: 50px;
+}
+
+.about {
+  background: url("img/i_button.gif") no-repeat;
+  padding-left: 21px;
+}
+.search {
+  background: url("img/search.gif") no-repeat;
+  padding-left: 21px;
+}
+.download {
+  background: url("img/download.gif") no-repeat;
+  padding-left: 21px;
 }
