--- a/newlogobranding/scriptorium/scriptorium.css
+++ b/newlogobranding/scriptorium/scriptorium.css
@@ -145,18 +145,18 @@ h1 {
 
 
 h2 {
-	font-size: 1em;
+	font-size: 1.2em;
 	margin-bottom: 0px;
 	font-variant: normal;
 	font-weight:700
 }
 
-h3 {font-size: .8 em;
+h3 {font-size: 1em;
 	margin-bottom: 0px;
 	font-variant: normal;
 	font-weight:700}
 
-h4 {font-size: .7em;
+h4 {font-size: .8em;
 	margin-bottom: 0px;
 	font-variant: normal;
 	font-weight:700}
